# dilbert-feed

./: .gitignore  Cargo.toml  Gopkg.toml  LICENSE  Makefile  README.md  app.py  cdk.json  dev.yml  go.mod  go.sum  index.ts  infra.ts  infrastructure.yaml  invoke  main.go  package-lock.json  package.json  prod.yml  renovate.json  requirements.in  requirements.txt  rust-toolchain.toml  serverless-dev.yml  serverless-prod.yml  serverless.yml  up.json
.cargo/: config.toml
.github/workflows/: rust.yaml
cmd/dilbert-dl/: main.go
dilbert/: dilbert.go  dilbert_test.go
dilbert/testdata/strip/: 2000-01-01  2018-10-30  2019-11-02
download/: main.go
download-strip/: main.go
echo/: lambda.rs
feed/: main.go
functions/get-strip/: main.go
functions/heartbeat/: lambda.ts
functions/internal/dilbert/: dilbert.go  dilbert_test.go
gen-feed/: feed.go  feed_test.go  main.go
gen-feed/testdata/: feed.xml
generate-feed/: main.go
get-strip/: dilbert.rs  lambda.rs  main.go
heartbeat/: index.js  lambda.rs  lambda.ts  main.go
terraform/: cron.tf  main.tf  state_machine.tf  variables.tf
terraform/dilbert-feed/: cron.tf  heartbeat.tf  lambda.tf  state_machine.tf  variables.tf
terraform/environments/dev/: main.tf
terraform/environments/prod/: main.tf
terraform/modules/bootstrap/: main.tf
terraform/modules/dilbert-feed/: cron.tf  dynamodb.tf  lambda.tf  s3.tf  state_machine.json  state_machine.tf  variables.tf
terraform/production/: main.tf
