[package]
name = "dilbert-feed"
version = "1.0.0"
description = "Enjoy Dilbert in your RSS feed reader without any ads"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mlafeldt/dilbert-feed"
edition = "2018"

[dependencies]
anyhow = "1.0"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.22-alpha", features = ["rustls"] }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.22-alpha", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.10"
env_logger = { version = "0.9", default-features = false, features = ["humantime"] }
futures = "0.3"
lambda_runtime = "0.4"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rss = "1.0"
select = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
pretty_assertions = "1.0"
wiremock = "0.5"
