[package]
name = "dilbert-feed"
version = "1.0.0"
description = "Enjoy Dilbert in your RSS feed reader without any ads"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mlafeldt/dilbert-feed"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = { version = "0.55", features = ["rustls"] }
aws-sdk-s3 = { version = "0.26", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.12"
futures = "0.3"
lambda_runtime = "0.8"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
rss = "2"
select = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
wiremock = "0.5"
